--- a/ublox_gps/package.xml
+++ b/ublox_gps/package.xml
@@ -27,6 +27,7 @@
   <depend>ublox_msgs</depend>
   <depend>ublox_serialization</depend>
   <depend>rtcm_msgs</depend>
+  <depend>meka_heartbeat_cpp</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
